--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ version: 2.1
 jobs:
   build_and_test:
     docker:
-      - image: cimg/node:20.11.0
+      - image: cimg/node:20.11.0-browsers
     steps:
       - checkout
       - run: yarn install
