--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,12 @@ jobs:
   build_and_test:
     docker:
       - image: cimg/node:20.11.0-browsers
+    environment:
+      CHROME_BIN: /usr/bin/google-chrome karma start --single-run      
     steps:
       - checkout
       - run: yarn install
-      - run: yarn test
+      - run: yarn test      
     working_directory: ~/app
   deploy:
     docker:
