--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,9 @@ jobs:
   build_and_test:
     docker:
       - image: cimg/node:20.11.0-browsers
-    environment:
-      CHROME_BIN: /usr/bin/google-chrome karma start --single-run      
+        environment:
+          CHROME_BIN: /usr/bin/google-chrome
+          #CHROME_BIN: /usr/bin/google-chrome karma start --single-run      
     steps:
       - checkout
       - run: yarn install
