--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: emporium
-          image: renderman/emporium:latest  
+          image: renderman/emporium:10  
           resources:
             requests:
               memory: "64Mi"
