--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -7,7 +7,8 @@ spec:
   type: NodePort
   ports:
     - name: http
-      port: 30080
+      nodePort: 30080
+      port: 80
       targetPort: 80
       protocol: TCP
     # - name: httpsk
